# actionspyC

./: Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
